--- a/indecision/public/index.html
+++ b/indecision/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <title>Indecision App</title>
 </head>
 
